--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>chatxo</title>
+  <link rel="stylesheet" href="css/global.css">
 </head>
 <body>
   <div id="react"></div>
